[package]
name = "actix_jwt_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
uuid = {version = "1.17.0", features = ["v4"]}
serde = {version = "1", features = ["derive"]}
serde_json = { version = "1.0"}

env_logger = "0.11.8"
log = "0.4"

strum_macros = "0.27.2"
strum = {version = "0.27.2", features = ["derive"]}
derive_more = "2.0.1"
dotenv = "0.15"

sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls", "time"] }
tokio = { version = "1.0", features = ["full"] }

anyhow = "1.0.99"

validator = { version = "0.16.1", features = ["derive"] }
thiserror = { version = "2.0.12"}
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }

[lints]
clippy.all = "warn"
clippy.pedantic = "warn" 